--- a/layout/footer.html
+++ b/layout/footer.html
@@ -16,7 +16,7 @@
           </div>
           <div class="left_box on">
             <div class="left_box_img">
-              <a href="/"> <img src="img/logo_m.png" alt="" /></a>
+              <a href="/"> <img src="../../img/logo_m.png" alt="" /></a>
             </div>
             <div class="title">
               <h2>舞牛森度假飯店</h2>
