--- a/layout/header.html
+++ b/layout/header.html
@@ -34,7 +34,7 @@
     </div>
     <div class="header_m">
       <div class="hd_m_img">
-        <a href="/"> <img src="img/logo_m.png" alt="" /></a>
+        <a href="/"> <img src="../../img/logo_m.png" alt="" /></a>
       </div>
       <div class="burger">
         <div class="menu">
