--- a/style/location.css
+++ b/style/location.css
@@ -228,6 +228,10 @@ img {
   flex-direction: column;
   align-items: center;
 }
+.location_bg .txt a:hover {
+  transition: 0.5s;
+  color: #63bedf;
+}
 .location_bg .txt p {
   padding-top: 10px;
   writing-mode: vertical-lr;
@@ -255,12 +259,22 @@ img {
   margin: 50px 140px 100px 160px;
   background-color: #e9e9e9;
 }
+@media screen and (max-width: 1180px) {
+  .line {
+    margin: 50px 20px;
+  }
+}
 
 .maps {
   padding: 0 140px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media screen and (max-width: 1180px) {
+  .maps {
+    padding: 0 20px;
+  }
 }
 .maps .location_maps {
   width: 100%;
@@ -269,6 +283,11 @@ img {
 
 .location_item {
   padding-left: 160px;
+}
+@media screen and (max-width: 1180px) {
+  .location_item {
+    padding: 0 20px 50px;
+  }
 }
 .location_item .txt {
   padding-top: 50px;
