--- a/style/latest.css
+++ b/style/latest.css
@@ -228,6 +228,10 @@ img {
   flex-direction: column;
   align-items: center;
 }
+.latest_bg .txt a:hover {
+  transition: 0.5s;
+  color: #63bedf;
+}
 .latest_bg .txt p {
   padding-top: 10px;
   writing-mode: vertical-lr;
