--- a/style/location.scss
+++ b/style/location.scss
@@ -1,114 +1,130 @@
 @import "reset";
 @import "method";
 .location_bg {
-    padding-left: 140px;
-    position: relative;
-    overflow: hidden;
-    @include rwd(1180) {
-      padding-left: 0;
-      margin-top: 80px;
-    }
-    &::before {
-      content: "";
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      background-color: black;
-      opacity: 0.2;
-    }
-    img{
-      height: 640px;
-    }
-    .title {
-      position: absolute;
-      top: 15%;
-      left: 45%;
-      writing-mode: vertical-lr;
-      color: #fff;
-      h2 {
-        font-size: 20px;
-        position: relative;
-        &::after {
-          content: "";
-          height: 100px; 
-          width: 1px;
-          margin-top: 20px;
-          background-color: #fff;
-          position: absolute;
-          left: 50%;
-        }
-      }
-      h1 {
-        font-size: 55px;
+  padding-left: 140px;
+  position: relative;
+  overflow: hidden;
+  @include rwd(1180) {
+    padding-left: 0;
+    margin-top: 80px;
+  }
+  &::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: black;
+    opacity: 0.2;
+  }
+  img {
+    height: 640px;
+  }
+  .title {
+    position: absolute;
+    top: 15%;
+    left: 45%;
+    writing-mode: vertical-lr;
+    color: #fff;
+    h2 {
+      font-size: 20px;
+      position: relative;
+      &::after {
+        content: "";
+        height: 100px;
+        width: 1px;
+        margin-top: 20px;
+        background-color: #fff;
+        position: absolute;
+        left: 50%;
       }
     }
-    .txt {
-      position: absolute;
-      top: 30%;
-      right: 2%;
+    h1 {
+      font-size: 55px;
+    }
+  }
+  .txt {
+    position: absolute;
+    top: 30%;
+    right: 2%;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    @include rwd(840) {
+      display: none;
+    }
+    a {
       display: flex;
       flex-direction: column;
-      color: #fff;
-      @include rwd(840){
-          display: none;
+      align-items: center;
+      &:hover {
+        transition: 0.5s;
+        color: #63bedf;
       }
-      a {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      p {
-        padding-top: 10px;
-        writing-mode: vertical-lr;
-      }
-      span {
-        writing-mode: vertical-lr;
-        position: relative;
-        margin-top: 30px;
-        &::before {
-          content: "";
-          position: absolute;
-          top: -17px;
-          left: 10px;
-          width: 4px;
-          height: 4px;
-          border-radius: 100%;
-          background: #fff;
-          z-index: 1;
-        }
+    }
+    p {
+      padding-top: 10px;
+      writing-mode: vertical-lr;
+    }
+    span {
+      writing-mode: vertical-lr;
+      position: relative;
+      margin-top: 30px;
+      &::before {
+        content: "";
+        position: absolute;
+        top: -17px;
+        left: 10px;
+        width: 4px;
+        height: 4px;
+        border-radius: 100%;
+        background: #fff;
+        z-index: 1;
       }
     }
   }
-  .line{
-    width: 80%;
-    height: 1px;
-    margin:50px 140px 100px 160px;
-    background-color: #e9e9e9;
+}
+
+.line {
+  width: 80%;
+  height: 1px;
+  margin: 50px 140px 100px 160px;
+  background-color: #e9e9e9;
+  @include rwd(1180){
+    margin: 50px 20px;
   }
-.maps{
-    padding:0 140px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-.location_maps{
+}
+
+.maps {
+  padding: 0 140px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
+  .location_maps {
     width: 100%;
     padding-left: 20px;
-}  
+  }
 }
-.location_item{
+
+.location_item {
   padding-left: 160px;
-.txt{
-  padding-top: 50px;
-  h2{
-    font-size: 18px;
-    font-weight: bolder;
+  @include rwd(1180){
+    padding: 0 20px 50px;
   }
-  p{
-    line-height: 1.8;
-    color: #404040;
+  .txt {
+    padding-top: 50px;
+    h2 {
+      font-size: 18px;
+      font-weight: bolder;
+    }
+    p {
+      line-height: 1.8;
+      color: #404040;
+    }
+    span {
+      color: rgb(230, 126, 34);
+    }
   }
-  span{
-    color: rgb(230, 126, 34);
-  }
-}
 }
