--- a/style/main.css
+++ b/style/main.css
@@ -1438,6 +1438,10 @@ img {
   flex-direction: column;
   align-items: center;
 }
+.introduction_bg .txt a:hover {
+  transition: 0.5s;
+  color: #63bedf;
+}
 .introduction_bg .txt p {
   padding-top: 10px;
   writing-mode: vertical-lr;
