--- a/style/rooms.scss
+++ b/style/rooms.scss
@@ -57,6 +57,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      &:hover {
+        transition: 0.5s;
+        color: #63bedf;
+      }
     }
     p {
       padding-top: 10px;
