--- a/style/servers.scss
+++ b/style/servers.scss
@@ -225,6 +225,10 @@
   margin: 100px  20px ;
   border-radius: 10px;
   position: relative;
+  display: none;
+  @include rwd(1024){
+    display: block;
+  }
   .tag_txt {
     display: flex;
     justify-content: space-between;
@@ -398,6 +402,9 @@
 // farm
 .farm {
   padding: 0 140px 0 180px;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
   .title {
     padding: 60px 0 12px;
     font-size: 24px;
@@ -443,6 +450,9 @@
 // canopy
 .canopy {
   padding: 0 140px 0 180px;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
   .title {
     padding: 60px 0 12px;
     font-size: 24px;
@@ -488,6 +498,9 @@
 // sky
 .sky {
   padding: 0 140px 0 180px;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
   .title {
     padding: 60px 0 12px;
     font-size: 24px;
@@ -533,6 +546,9 @@
 // garden
 .garden {
   padding: 0 140px 0 180px;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
   .title {
     padding: 60px 0 12px;
     font-size: 24px;
@@ -578,6 +594,9 @@
 // restaurant
 .restaurant {
   padding: 0 140px 0 180px;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
   .title {
     padding: 60px 0 12px;
     font-size: 24px;
@@ -623,6 +642,9 @@
 // dairy
 .dairy {
   padding: 0 140px 0 180px;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
   .title {
     padding: 60px 0 12px;
     font-size: 24px;
@@ -670,6 +692,9 @@
 // hold
 .hold {
   padding: 0 140px 0 180px;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
   .title {
     padding: 60px 0 12px;
     font-size: 24px;
@@ -710,7 +735,7 @@
       }
     }
     .hold_contact {
-      width: 20%;
+      width: 50%;
       margin: 0 auto;
       cursor: pointer;
       &:hover {
@@ -730,6 +755,9 @@
 // gathering
 .gathering {
   padding: 0 140px 0 180px;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
   .title {
     padding: 60px 0 12px;
     font-size: 24px;
@@ -790,6 +818,9 @@
 // colleague
 .colleague {
   padding: 0 140px 0 180px;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
   .title {
     padding: 60px 0 12px;
     font-size: 24px;
@@ -850,6 +881,9 @@
 // picnic
 .picnic {
   padding: 0 140px 0 180px;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
   .title {
     padding: 60px 0 12px;
     font-size: 24px;
@@ -897,6 +931,9 @@
 // milk
 .milk {
   padding: 0 140px 0 180px;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
   .title {
     padding: 60px 0 12px;
     font-size: 24px;
@@ -944,6 +981,9 @@
 // sun
 .sun {
   padding: 0 140px 0 180px;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
   .title {
     padding: 60px 0 12px;
     font-size: 24px;
@@ -991,6 +1031,9 @@
 // banquet
 .banquet {
   padding: 0 140px 0 180px;
+  @include rwd(1180){
+    padding: 0 20px;
+  }
   .title {
     padding: 60px 0 12px;
     font-size: 24px;
