--- a/layout/header.html
+++ b/layout/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style/header.css" />
+    <link rel="stylesheet" href="../../style/header.css" />
   </head>
 
   <body>
@@ -27,7 +27,7 @@
           </ul>
         </div>
         <div class="message_box">
-          <img class="message_img" src="img/mail.png" alt="" />
+          <img class="message_img" src="../../img/mail.png" alt="" />
           <h2>聯絡我們</h2>
         </div>
       </div>
@@ -59,7 +59,7 @@
               </ul>
             </div>
             <div class="message_box">
-              <img class="message_img" src="img/mail.png" alt="" />
+              <img class="message_img" src="../../img/mail.png" alt="" />
               <h2>聯絡我們</h2>
             </div>
           </div>
