--- a/layout/footer.html
+++ b/layout/footer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style/footer.css" />
+    <link rel="stylesheet" href="../../style/footer.css" />
   </head>
 
   <body>
