--- a/style/rooms.scss
+++ b/style/rooms.scss
@@ -87,8 +87,10 @@
 
 // rooms_item
 .rooms_item {
-  padding-top: 50px;
-  padding-left: 140px;
+  padding: 50px 0 0 140px;
+  @include rwd(1180){
+    padding-left: 0;
+  }
   .wrap {
     width: 100%;
     max-width: 1540px;
@@ -148,11 +150,13 @@
         }
       }
       .txt {
+       
         text-align: center;
         font-size: 20px;
         padding-top: 30px;
         letter-spacing: 3px;
         p {
+          margin-bottom: 20px;
           font-weight: bold;
           cursor: pointer;
           position: relative;
@@ -171,36 +175,24 @@
             background-color: #c8c8c8;
           }
         }
-        h3 {
-          margin: 20px 0;
+        span {
+          padding: 0 10px;
           font-size: 15px;
           line-height: 1.8;
           letter-spacing: 3px;
           color: #404040;
-          display: flex;
-          align-items: center;
-          justify-content: center;
           position: relative;
-          &::before,
-          &::after {
-            content: "";
-            width: 1px;
-            height: 20px;
-            position: absolute;
-            background-color: #000;
-          }
-          &::before {
-            left: 45%;
-          }
-          &::after{
-            right: 45%;
-          }
+          border-left: 1px solid #666;
+          border-right: 1px solid #666;
         }
         h4 {
           font-size: 15px;
           line-height: 1.8;
           letter-spacing: 3px;
           color: #404040;
+        }
+        .room_content{
+          margin-top: 20px;
         }
       }
     }
