--- a/style/main.scss
+++ b/style/main.scss
@@ -550,7 +550,7 @@ body {
   &.mid {
     position: absolute;
     top: 533%;
-    right: -8px;
+    // right: -8px;
   }
   ul {
     text-align: center;
