--- a/style/online.scss
+++ b/style/online.scss
@@ -265,7 +265,7 @@ body {
   .slick-dots {
     width: 100%;
     top: auto;
-    left: auto ;
+    left: auto;
     bottom: -20px;
     li {
       width: 30px;
@@ -310,52 +310,41 @@ body {
   margin: 0 auto;
   border: 1px solid #000;
   border-radius: 20px 20px 0 0;
-  table {
-    td {
-      &:hover {
-        background-color: #c0e1fa;
-      }
+  .fc-header-toolbar {
+    position: relative;
+    justify-content: center;
+    margin-bottom: 0 !important;
+    padding-bottom: 1.5em;
+    border-radius: 20px 20px 0 0;
+    &:hover{
+      background: #C0E1FA;
     }
-    .font3 {
-      display: block;
-      padding: 5px 0;
-      font-weight: bolder;
-      color: #b20000;
+  }
+  .fc-toolbar-chunk {
+    &:nth-child(3) {
+      display: none;
     }
-    .week {
-      height: 40px;
-      background-color: #97999b;
-      color: #fff;
-      td {
-        &:hover {
-          background-color: #97999b;
-        }
-        
-      }
-    }
-    .cleander_td {
-      height: 60px;
-      cursor: pointer !important;
-      border: 1px solid #97999b;
-      padding: 5px 0;
-    }
-    td {
-      text-align: center;
-      .data{
-        font-size: 12px;
-      }
-    }
-    img {
-      width: 16px;
-      height: 16px;
-    }
-    .month_cell {
-      text-align: center;
-      padding: 10px 0;
-      &:hover {
-        border-radius: 20px 20px 0 0;
-        background-color: #c0e1fa;
-      }
+  }
+  .fc-today-button {
+    display: none;
+  }
+  .fc-daygrid-day-top {
+    justify-content: center;
+  }
+  .fc-next-button {
+    position: absolute !important;
+    right: -300px;
+  }
+  .fc-toolbar-title {
+    padding: 0 50px;
+  }
+  .fc-button-primary:not(:disabled):active:focus,
+  .fc-button-primary:focus {
+    box-shadow: none;
+  }
+  .fc-day{
+    &:hover{
+      background: #C0E1FA;
     }
   }
 }
@@ -449,7 +438,7 @@ body {
       padding: 30px 0 0 10px;
       li {
         list-style: disc;
-        .separate{
+        .separate {
           padding-bottom: 20px;
         }
       }
